DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Sep-24-2004 patrickh    Sync up with Gadgeteer 0.19.0.
                        NEW VERSION: 0.10.2
Oct-19-2004 patrickh    Added support for Darwin/Mac OS X.
                        NEW VERSION: 0.10.1
Sep-24-2004 patrickh    Sync up with Gadgeteer 0.17.0.
                        NEW VERSION: 0.10.0
Sep-22-2004 patrickh    Exposed gadget::InputManager.
                        NEW VERSION: 0.9.3
Jul-14-2004 patrickh    NEW VERSION: 0.9.2
Jul-12-2004 patrickh    Exposed vpr::ObjectReader, vpr::ObjectWriter,
                        vpr::ReadableObject, vpr::WriteableObject, and
                        vpr::SerializableObject.
                        PyJuggler.vpr is now imported automatically with all
                        the other modules under the PyJuggler namespace.
Jul-09-2004 patrickh    Regenerated the Boost.Python bindings code.
Jul-02-2004 patrickh    NEW VERSION: 0.9.1
Jul-01-2004 patrickh    Fixed a problem with multiple threads and Python 2.3 on
                        Windows.
May-03-2004 patrickh    Added a Visual Studio build for use on Windows.
May-01-2004 patrickh    NEW VERSION: 0.9.0
Mar-12-2004 patrickh    Fixed conditional handling of vrj.OsgApp so that we do
                        not require that users have OSG installed just to be
                        able to use PyJuggler.
                        NEW VERSION: 0.8.4
Dec-08-2003 patrickh    Updated to VR Juggler 1.1.148.
                        NEW VERSION: 0.8.3
Nov-23-2003 patrickh    Updated the Autoconf-based build system to use the
                        Doozer++ HEAD branch.
Sep-13-2003 patrickh    Added a Jamfile for easier compiling.
Sep-07-2003 patrickh    Added separate debug and optimized build capabilities.
Aug-31-2003 patrickh    Changed --with-bpldir to --with-boost-python.  The
                        option now specifies the root of the Boost.Python