@@ -11,6 +11,7 @@
 
 // Exports =====================================================================
 void _Export_GlApp();
+void _Export_GlContextData();
 void _Export_Kernel();
 void _Export_App();
 void _Export_Projection();
@@ -29,6 +30,7 @@ BOOST_PYTHON_MODULE(__vrj)
 
     _Export_App();
     _Export_GlApp();
+    _Export_GlContextData();
     _Export_Kernel();
     _Export_Projection();
     _Export_Display();
