@@ -1,5 +1,8 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Oct-25-2004 patrickh    Added support for context-specific data in applications
+                        using the OpenGL Draw Manager
+                        NEW VERSION: 0.11.0
 Sep-24-2004 patrickh    Sync up with Gadgeteer 0.19.0.
                         NEW VERSION: 0.10.2
 Oct-19-2004 patrickh    Added support for Darwin/Mac OS X.
